# ngamma

./: run2.mac
B1_shielding/: CMakeLists.txt  exampleB1.cc  generate_report.sh  scintillator_output.root
B1_shielding/analysis/: comprehensive_shielding_analysis.C  experimental_validation_analysis.C  geometry_plot.C  mathematical_modeling_analysis.C  report_analysis.C  run_comprehensive_analysis.C  test_step_convergence.C
B1_shielding/docs/: ANALYSIS_GUIDE.md  Geant4_Precision_Settings_Guide.md  Geant4_Project_Structure_Guide.md  README.md  SOURCE_TYPES_GUIDE.md
B1_shielding/gamma_ana/: gamma_composition_mu.C  gamma_energy_deposition.C  gamma_energy_transmission.C  gamma_thickness_efficiency.C
B1_shielding/include/: ActionInitialization.hh  CustomPhysicsList.hh  DPAModelConfig.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
B1_shielding/macros/: Am241_gamma_batch_template.mac  Am241_gamma_point.mac  Am241_gamma_test.mac  Cf252_neutron_test.mac  annular_source.mac  auto_run_20250924_150730_440328.mac  auto_run_20250924_150739_860185.mac  auto_run_20250924_151116_660131.mac  combined_shielding_test.mac  conical_beam.mac  gamma_shielding.mac  line_source.mac  mixed_shielding.mac  multi_energy_source.mac  neutron_shielding.mac  parallel_beam.mac  run1.mac  surface_source.mac  test_cf252_detailed.mac  test_cf252_simple.mac  test_oxide_composition.mac  track_test.mac  volume_source.mac
B1_shielding/macros/recipes/: recipe_0001.txt  recipe_0002.txt  recipe_0003.txt  recipe_0004.txt  recipe_0005.txt  recipe_0006.txt
B1_shielding/neutron_ana/: neutron_capture_cross_section.C  neutron_dpa_vs_fluence.C  neutron_energy_transmission.C  neutron_niel_vs_energy.C  neutron_secondary_gamma_spectrum.C
B1_shielding/report_images/: report_summary.txt
B1_shielding/src/: ActionInitialization.cc  CustomPhysicsList.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
B1_shielding/tools/: gui_sweep.py  sweep_recipes.example.json  sweep_recipes.py  sweep_recipes_am241.json  web_sweep.py
B1_shielding/tools/web_jobs/: 2b06110904e8.json  4bafc69f35d6.json  7f675841d57b.json  c2a1b9ce6bab.json  c3a9d546a33c.json
